# spark-sdk

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Makefile  Makefile.common  PASSKEY_API_REDUCTION_PLAN.md  PR_534_REVIEW.md  README.md  generate_dockerignore.sh  jitpack.yml  multi-user-backend-analysis.md  pr-504-review.md  pr-742-regression-analysis.md
crates/boltz/: Cargo.toml  README.md
crates/boltz/cli/: Cargo.toml
crates/boltz/cli/src/: main.rs
crates/boltz/lib/: Cargo.toml
crates/boltz/lib/src/: config.rs  error.rs  events.rs  keys.rs  lib.rs  store.rs
crates/boltz/lib/test_vectors/: generate_signing.mjs
crates/boltz/src/: config.rs  error.rs  events.rs  keys.rs  lib.rs  models.rs  recover.rs  store.rs
crates/boltz/src/api/: mod.rs  types.rs  ws.rs
crates/boltz/src/evm/: alchemy.rs  contracts.rs  mod.rs  oft.rs  provider.rs  signing.rs
crates/boltz/src/swap/: manager.rs  mod.rs  reverse.rs
crates/boltz/test_vectors/: generate.mjs  package-lock.json  package.json
crates/boltz/tests/regtest/: docker.rs  main.rs  setup.rs
crates/breez-sdk/bindings/: .gitignore  Cargo.toml  DEVELOPMENT.md  Makefile  build.rs  uniffi.kotlin-multiplatform.toml  uniffi.toml
crates/breez-sdk/bindings/golang-memtest/: README.md  config.go  event_listener.go  faucet.go  go.mod  leak_detection.md  main.go  memory_tracker.go  payment_loop.go  rss_darwin.go  rss_linux.go  sdk_wrapper.go
crates/breez-sdk/bindings/src/: lib.rs
crates/breez-sdk/bindings/tests/: test_generated_bindings.rs
crates/breez-sdk/breez-bench/: .gitignore  Cargo.toml  README.md
crates/breez-sdk/breez-bench/js/: README.md  bigint_json.js  concurrent_perf.js  faucet.js  package-lock.json  package.json
crates/breez-sdk/breez-bench/kotlin/: DESIGN.md  Makefile  README.md  build.gradle.kts  settings.gradle.kts
crates/breez-sdk/breez-bench/src/: events.rs  lib.rs  main.rs  operation_detector.rs  scenarios.rs  stats.rs  swap_detector.rs
crates/breez-sdk/breez-itest/: Cargo.toml  MEMORY_TESTS.md  README.md
crates/breez-sdk/breez-itest/scripts/: generate_memtest_plots.py
crates/breez-sdk/breez-itest/src/: chain_service.rs  concurrent_scenarios.rs  external_spark_signer.rs  faucet.rs  fixtures.rs  helpers.rs  lib.rs  local_sdk.rs  log.rs  recording_signer.rs  session_manager_scenarios.rs  session_store_scenarios.rs  transfer_authorization.rs  turnkey.rs
crates/breez-sdk/breez-itest/tests/: breez_sdk_tests.rs  client_signing_send.rs  concurrent_storage.rs  concurrent_storage_mysql.rs  concurrent_storage_mysql_server_mode.rs  concurrent_storage_server_mode.rs  concurrent_token_storage.rs  concurrent_token_storage_mysql.rs  connection_manager.rs  conversion_send_server_mode.rs  deposit_withdraw.rs  distributed_lock.rs  external_signer.rs  idempotency_tests.rs  lightning_hodl.rs  lightning_send_server_mode.rs  lnurl.rs  lnurl_auth.rs  mainnet_cross_chain.rs  mainnet_server_mode_conversion.rs  mainnet_stable_balance.rs  mainnet_teardown.rs  mainnet_token_conversion.rs  memory_test.rs  message_signing.rs  optimization.rs  recovery.rs  rtsync.rs  session_persistence.rs  session_persistence_mysql.rs  signer_backends.rs  spark_htlcs.rs  ssp_connection_manager.rs  stable_balance.rs  token_conversion.rs  tokens.rs  transfer_context.rs  turnkey.rs  (+6 more)
crates/breez-sdk/cli/: Cargo.toml  README.md
crates/breez-sdk/common/: Cargo.toml  build.rs  uniffi.kotlin-multiplatform.toml  uniffi.toml
crates/breez-sdk/core/: Cargo.toml  Makefile  uniffi.kotlin-multiplatform.toml  uniffi.toml
crates/breez-sdk/lnurl/: .dockerignore  Cargo.toml  Dockerfile  README.md  diesel.toml  fly.toml
crates/breez-sdk/wasm/: Cargo.toml  Makefile  rust-analyzer.json
crates/domain-validator/: Cargo.toml
crates/domain-validator/src/: lib.rs
crates/flashnet/: Cargo.toml
crates/flashnet/src/: api.rs  auth.rs  cache.rs  config.rs  error.rs  lib.rs  models.rs  pool_selection.rs
crates/fly-api/: Cargo.toml
crates/fly-api/src/: lib.rs
crates/internal/: .gitignore  Cargo.toml  Makefile  README.md
crates/internal/src/: config.rs  main.rs
crates/nip65-publisher/: Cargo.toml  README.md
crates/nip65-publisher/src/: main.rs
crates/pg-wasm/: Cargo.toml  README.md
crates/pg-wasm/js/: package.json  pg-wasm-bridge.cjs
crates/pg-wasm/src/: lib.rs
crates/platform-utils/: Cargo.toml
crates/platform-utils/src/: auth.rs  error.rs  lib.rs
crates/spark/: Cargo.toml  Makefile  build.rs
crates/spark-compat-itest/: Cargo.toml
crates/spark-compat-itest/src/: lib.rs
crates/spark-compat-itest/tests/: compat.rs
crates/spark-itest/: Cargo.toml  Makefile  README.md
crates/spark-itest/docker/: bitcoind.dockerfile  entrypoint.sh  migrations.dockerfile  so.config.yaml  spark-so.dockerfile
crates/spark-itest/src/: backend.rs  faucet.rs  helpers.rs  lib.rs  mempool.rs
crates/spark-itest/tests/: breez_sdk_tests.rs  deployed_deposit_tests.rs  deployed_session_tests.rs  deployed_token_tests.rs  local_timelock_tests.rs  local_unilateral_exit_tests.rs  local_wallet_tests.rs  token_tests.rs  wallet_tests.rs
crates/spark-postgres/: Cargo.toml
crates/spark-postgres/src/: advisory_lock.rs  config.rs  error.rs  lib.rs  migrations.rs  pool.rs  session_manager.rs  session_store.rs  time_compat.rs  token_store.rs  tree_store.rs
crates/spark-sqlite/: Cargo.toml
crates/spark-sqlite/src/: lib.rs
crates/spark-wallet/: Cargo.toml  Makefile
crates/spark-wallet/src/: config.rs  error.rs  event.rs  leaf.rs  lib.rs  model.rs  unilateral_exit.rs  wallet.rs  wallet_builder.rs
crates/spark/schema/: queries.graphql  regtest.graphql  spark.graphql  webhook.graphql  webhook_queries.graphql
crates/spark/src/: header_provider.rs  lib.rs  session_manager.rs
crates/utils/: Cargo.toml
crates/utils/src/: ecies.rs
examples/flashnet-simple-wallet/: Cargo.toml
examples/flashnet-simple-wallet/src/: flashnet.rs  main.rs  utils.rs
examples/spark-cli/: .gitignore  Cargo.toml
examples/spark-cli/src/: command.rs  config.rs  deposit.rs  leaves.rs  lightning.rs  main.rs  mempool.rs  transfer.rs
(+1593 files in other folders)
