[workspace]
resolver = "2"
members = [
  "crates/spark", 
  "crates/spark-wallet", 
  "crates/spark-itest",
  "examples/spark-cli", 
  "crates/breez-sdk/core", 
  "crates/breez-sdk/common", 
  "crates/breez-sdk/macros",
  "crates/breez-sdk/core",
  "crates/breez-sdk/cli"
]

[workspace.package]
version = "0.1.0"

[workspace.lints.clippy]
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
struct_field_names = "allow"
arithmetic_side_effects = "warn"

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
base64 = "0.22.1"
bech32 = "0.11.0"
bip39 = "2.2.0"
bitcoin = { version =  "0.32.6", features = ["serde"] }
breez-sdk-common = { path = "crates/breez-sdk/common" }
breez-sdk-core = { path = "crates/breez-sdk/core" }
breez-sdk-macros = { path = "crates/breez-sdk/macros" }
chrono = { version = "0.4.37", features = ["serde"] }
clap = "4.5.40"
dns-parser = "0.8.0"
dotenvy = "0.15.7"
ecies = "0.2.0"
enum_to_enum="0.1.0"
figment = "0.10.19"
# frost-core = "2.1.0"
frost-core = { package = "frost-core-unofficial", version = "2.2.0" }
# frost-secp256k1-tr = "2.1.0"
frost-secp256k1-tr = { package = "frost-secp256k1-tr-unofficial", version = "2.2.0" }
futures = { version = "0.3", default-features = false }
graphql_client = { version = "0.14.0" }
hex = "0.4.3"
hickory-resolver = "0.25.2"
k256 = { version = "0.13.0", features = ["arithmetic", "schnorr", "ecdsa"] }
lightning = "0.1.3"
lightning-invoice = "0.33.1"
maybe-sync = "0.1.1"
percent-encoding-rfc3986 = "0.1.3"
prost = "0.13.4"
prost-types = "0.13.4"
qrcode-rs = { version = "0.1", default-features = false }
rand = "0.8"
reqwest = { version = "0.12.18", features = ["json"] }
rstest = "0.26.1"
rusqlite = { git = "https://github.com/Spxg/rusqlite", rev = "8e53118a3e1807dc9a9f59c5969fdff7e0416400", features = [
    "backup",
    "bundled",
] }
rusqlite_migration = { git = "https://github.com/breez/rusqlite_migration", branch = "spxg-rusqlite" }
rustls = { version = "0.23.28", features = ["ring"] }
rustyline = "16.0.0"
serde = "1.0.219"
serde_json = "1.0.140"
serde_with = "3.13.0"
shellwords = "1.1.0"
spark = { path = "crates/spark" }
spark-macros = { path = "crates/spark-macros" }
spark-wallet = { path = "crates/spark-wallet" }
strum = "0.27.1"
strum_macros = "0.27.1"
tempdir = "0.3.7"
test-log = { version = "0.2.18", default-features = false }
testcontainers = "0.24.0"
testcontainers-modules = "0.12.1"
testdir = "0.9.3"
thiserror = "2.0.12"
tokio = { version = "1.45.1", default-features = false }
tokio-postgres = "0.7.10"
tokio-test = "0.4.4"
tonic = { version = "0.12.3", features = [
    "tls",
    "tls-webpki-roots",
    "prost",
    "channel",
] }
tonic-build = { version = "0.12.3", features = ["prost"] }
tonic-web-wasm-client = "0.7.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uniffi = "0.28.3"
uuid = { version = "1.17.0", features = ["v7", "v4"] }