[profile.release]
lto = true
opt-level = "z"   # Optimize for size.
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
panic = "abort"   # Abort on panic, as unwinding code does require extra binary size
rpath = true

[workspace]
resolver = "2"
members = [
  "crates/breez-sdk/bindings",
  "crates/breez-sdk/cli",
  "crates/breez-sdk/common",
  "crates/breez-sdk/core", 
  "crates/breez-sdk/lnurl-models",
  "crates/breez-sdk/breez-itest",
  "crates/breez-sdk/wasm",
  "crates/macros",
  "crates/macro_test",
  "crates/spark",
  "crates/spark-itest",
  "crates/spark-wallet",
  "crates/xtask",
  "crates/internal",
  "docs/breez-sdk/snippets/rust",
  "docs/breez-sdk/snippets-processor",
]

[workspace.package]
version = "0.1.0"
rust-version = "1.88"

[workspace.lints.clippy]
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
struct_field_names = "allow"
arithmetic_side_effects = "warn"

[workspace.dependencies]
aes = "0.8.4"
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.7"
base64 = "0.22.1"
bech32 = "0.11.0"
bip39 = "2.2.0"
bitcoin = { version = "0.32.7", features = ["serde"] }
bitflags = "2.10.0"
breez-sdk-common = { path = "crates/breez-sdk/common", default-features = false }
breez-sdk-spark = { path = "crates/breez-sdk/core" }
built = { version = "0.8.0", features = ["git2"] }
bytes = "1.11.0"
cargo_metadata = "0.23.1"
cbc = "0.1.2"
chrono = { version = "0.4.42", features = ["serde"] }
clap = "4.5.53"
dirs = "6.0.0"
dns-parser = "0.8.0"
dotenvy = "0.15.7"
ecies = { version = "0.2.10", default-features = false, features = ["pure"] }
enum_to_enum = "0.1.0"
figment = "0.10.19"
# frost-core = "2.1.0"
frost-core = { package = "frost-core-unofficial", version = "2.2.0" }
# frost-secp256k1-tr = "2.1.0"
frost-secp256k1-tr = { package = "frost-secp256k1-tr-unofficial", version = "2.2.0" }
futures = { version = "0.3.31", default-features = false }
glob = "0.3.3"
graphql_client = { version = "0.14.0" }
hex = "0.4.3"
hickory-resolver = "0.25.2"
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
js-sys = "0.3.82"
k256 = { version = "0.13.4", features = ["arithmetic", "schnorr", "ecdsa"] }
lightning = "0.1.7"
lightning-invoice = "0.33.2"
lnurl-models = { path = "crates/breez-sdk/lnurl-models" }
macros = { path = "crates/macros" }
mdbook-core = "0.5.1"
mdbook-preprocessor = "0.5.1"
nostr = { version = "0.44.1", default-features = false, features = ["std", "nip57"] }
openssl = { version = "0.10.75", default-features = false, features = ["vendored"] }
percent-encoding-rfc3986 = "0.1.3"
proc-macro2 = "1.0.103"
prost = "0.14.1"
prost-types = "0.14.1"
qrcode-rs = { version = "0.1.6", default-features = false }
quote = "1.0.42"
rand = "0.8"
rayon = "1.11.0"
rcgen = "0.14.5"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "http2", "charset", "system-proxy"] }
rstest = "0.26.1"
rstest_reuse = "0.7.0"
# We want to match the rusqlite version used by ldk-node and the rest of the ecosystem
rusqlite = { version = "0.31.0", features = ["backup", "bundled"] }
rusqlite_migration = { version = "1.2.0" }
rustls = { version = "0.23.35", default-features = false, features = ["ring"] }
rustyline = "17.0.2"
semver = "1.0.27"
serde = "1.0.228"
serde_json = "1.0.145"
serde-wasm-bindgen = "0.6.5"
serde_with = "3.16.0"
shellwords = "1.1.0"
shlex = "1.3.0"
spark = { path = "crates/spark", default-features = false }
spark-wallet = { path = "crates/spark-wallet", default-features = false }
strum = "0.27.2"
strum_macros = "0.27.2"
syn = "2.0.111"
tempdir = "0.3.7"
test-log = { version = "0.2.18", default-features = false }
testcontainers = "0.25.2"
testcontainers-modules = "0.13.0"
testdir = "0.9.3"
thiserror = "2.0.17"
tokio = { version = "1.48.0", default-features = false }
tokio-postgres = "0.7.15"
tokio-test = "0.4.4"
tokio_with_wasm = { version = "0.8.7", features = [
  "macros",
  "rt",
  "sync",
  "time",
] }
tonic = { version = "0.14.2", default-features = false }
tonic-prost = "0.14.2"
tonic-prost-build = "0.14.2"
tonic-web-wasm-client = "0.8.0"
tower-http = "0.6.7"
tower-service = "0.3.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tsify-next = {version = "0.5.6", default-features = false}
unicode-normalization = "0.1.25"
uniffi = "0.28.3"
uuid = { version = "1.18.1", features = ["v7", "v4"] }
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
wasm-bindgen-test = "0.3.55"
web-sys = { version = "0.3.82", features = ["console", "DomException"] }
web-time = { version = "1.1.0", features = ["serde"] }
x509-parser = "0.18.0"
xshell = "0.2.7"
zbase32 = "0.1.2"
