[profile.release]
lto = true
opt-level = "z"   # Optimize for size.
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
panic = "abort"   # Abort on panic, as unwinding code does require extra binary size
rpath = true

[workspace]
resolver = "2"
members = [
  "crates/breez-sdk/bindings",
  "crates/breez-sdk/cli",
  "crates/breez-sdk/common",
  "crates/breez-sdk/core",
  "crates/breez-sdk/lnurl-models",
  "crates/breez-sdk/breez-itest",
  "crates/breez-sdk/breez-bench",
  "crates/breez-sdk/wasm",
  "crates/flashnet",
  "crates/macros",
  "crates/macro_test",
  "crates/platform-utils",
  "crates/spark",
  "crates/spark-itest",
  "crates/spark-wallet",
  "crates/xtask",
  "crates/internal",
]

[workspace.package]
version = "0.1.0"
rust-version = "1.88"

[workspace.lints.clippy]
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
struct_field_names = "allow"
arithmetic_side_effects = "warn"

[workspace.dependencies]
aes = "0.8.4"
anyhow = "1.0.98"
async-trait = "0.1.88"
base64 = "0.22.1"
bech32 = "0.11.0"
bip39 = "2.2.0"
bitcoin = { version = "0.32.6", features = ["serde"] }
bitflags = "2.10.0"
bitreq = { version = "0.3.2", default-features = false, features = ["async", "async-https", "json-using-serde"] }
breez-sdk-common = { path = "crates/breez-sdk/common", default-features = false }
breez-sdk-spark = { path = "crates/breez-sdk/core" }
built = { version = "0.8.0", features = ["git2"] }
bytes = "1.10.1"
cargo_metadata = "0.18"
cbc = "0.1.2"
chrono = { version = "0.4.37", features = ["serde"] }
clap = "4.5.40"
dirs = "6.0.0"
ecies = { version = "0.2.7", default-features = false, features = ["pure"] }
enum_to_enum = "0.1.0"
figment = "0.10.19"
flashnet = { path = "crates/flashnet", default-features = false }
# frost-core = "2.1.0"
frost-core = { package = "frost-core-unofficial", version = "2.2.0" }
# frost-secp256k1-tr = "2.1.0"
frost-secp256k1-tr = { package = "frost-secp256k1-tr-unofficial", version = "2.2.0" }
futures = { version = "0.3", default-features = false }
glob = "0.3.1"
graphql_client = { version = "0.14.0" }
hex = "0.4.3"
dnssec-prover = { version = "0.6.7", default-features = false }
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
js-sys = "0.3.77"
k256 = { version = "0.13.0", features = ["arithmetic", "schnorr", "ecdsa"] }
lightning = "0.1.3"
lightning-invoice = "0.33.1"
lnurl-models = { path = "crates/breez-sdk/lnurl-models" }
macros = { path = "crates/macros" }
nostr = { version = "0.43.1", default-features = false, features = ["std", "nip57"] }
openssl = { version = "0.10.70", default-features = false, features = ["vendored"] }
platform-utils = { path = "crates/platform-utils" }
proc-macro2 = "1.0.97"
prost = "0.13.4"
prost-types = "0.13.4"
quote = "1.0.40"
rand = "0.8"
rayon = "1.10"
rcgen = "0.14.5"
regex = "1.11.2"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "http2", "charset", "system-proxy"] }
rstest = "0.26.1"
rstest_reuse = "0.7.0"
# We want to match the rusqlite version used by ldk-node and the rest of the ecosystem
rusqlite = { version = "0.31.0", features = ["backup", "bundled"] }
rusqlite_migration = { version = "1.2.0" }
rustls = { version = "0.23.28", default-features = false, features = ["ring"] }
rustyline = "16.0.0"
serde = "1.0.219"
serde_json = "1.0.140"
serde-wasm-bindgen = "0.6.5"
serde_with = "3.13.0"
shlex = "1.3.0"
spark = { path = "crates/spark", default-features = false }
spark-wallet = { path = "crates/spark-wallet", default-features = false }
strum = "0.27.1"
strum_macros = "0.27.1"
syn = "2.0.105"
test-log = { version = "0.2.18", default-features = false }
testcontainers = "0.24.0"
testcontainers-modules = "0.12.1"
testdir = "0.9.3"
thiserror = "2.0.12"
tokio = { version = "1.45.1", default-features = false }
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1"] }
tokio-postgres-rustls = "0.13"
deadpool-postgres = "0.14"
deadpool = "0.12"
tokio-test = "0.4.4"
tokio_with_wasm = { version = "0.8.7", features = [
  "macros",
  "rt",
  "sync",
  "time",
] }
tonic = { version = "0.12.3", default-features = false }
tonic-build = { version = "0.12.3", features = ["prost"] }
tonic-web-wasm-client = "0.6"
tower-service = "0.3.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tsify-next = {version = "0.5.5", default-features = false}
uniffi = "0.28.3"
url = "2.5"
uuid = { version = "1.17.0", features = ["v7", "v4"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
wasm-bindgen-test = "0.3.50"
web-sys = { version = "0.3.77", features = ["console", "DomException"] }
web-time = { version = "1.1.0", features = ["serde"] }
webpki-roots = "1.0"
xshell = "0.2"
