[package]
name = "flashnet"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[features]
default = []
# Enable browser wasm-pack tests
browser-tests = []

[dependencies]
base64.workspace = true
bitcoin.workspace = true
hex.workspace = true
macros.workspace = true
platform-utils.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_urlencoded = "0.7"
serde_with.workspace = true
spark.workspace = true
spark-wallet.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

# Non-Wasm dependencies
[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

# WASM dependencies
[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
tokio = { workspace = true, features = ["macros"] }

# WASM dev dependencies
[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test.workspace = true
