[package]
name = "spark-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
bip39.workspace = true
bitcoin.workspace = true
clap = { workspace = true, features = ["derive"] }
dotenvy = "0.15.7"
hex.workspace = true
qrcode-rs = { version = "0.1", default-features = false }
rand.workspace = true
platform-utils.workspace = true
base64.workspace = true
rustyline = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
shellwords = "1.1.0"
spark-wallet.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
