[package]
name = "platform-utils"
version.workspace = true
edition = "2024"

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
macros.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Non-Wasm dependencies
[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
bitreq.workspace = true

# WASM dependencies
[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
reqwest.workspace = true
