[package]
name = "platform-utils"
version.workspace = true
edition = "2024"

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
macros.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

# WASM dependencies
[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
web-time = { version = "1.1.0", features = ["serde"] }
tokio_with_wasm = { version = "0.8.7", features = [
  "macros",
  "rt",
  "sync",
  "time",
] }
