[package]
name = "spark-wallet"
version.workspace = true
edition = "2024"

[features]
default = ["default-tls"]
browser-tests = [] # Enable browser wasm-pack tests
# TLS features
default-tls = ["spark/default-tls"]
rustls-tls = ["spark/rustls-tls"]
native-tls = ["spark/native-tls"]

[dependencies]
bitcoin = { workspace = true, features = ["serde"] }
frost-secp256k1-tr.workspace = true
futures.workspace = true
hex.workspace = true
serde = { workspace = true, features = ["derive"] }
spark.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
tokio_with_wasm.workspace = true
tracing.workspace = true
web-time.workspace = true

# Non-Wasm dependencies
[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
uuid.workspace = true

# WASM dependencies
[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
uuid = { workspace = true, features = ["js"] }
