[package]
name = "flashnet-simple-wallet"
edition = "2024"
version.workspace = true

[dependencies]
bip39 = { workspace = true, features = ["rand"] }
bitcoin.workspace = true
clap = { workspace = true, features = ["derive"] }
dotenvy.workspace = true
figment = { workspace = true, features = ["env", "yaml"] }
hex.workspace = true
qrcode-rs.workspace = true
reqwest.workspace = true
rustyline = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
shellwords.workspace = true
spark-wallet.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
async-trait.workspace = true
once_cell = "1.19.0"

[lints]
workspace = true
