[package]
name = "spark-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
bip39.workspace = true
clap = { workspace = true, features = ["derive"] }
electrum-client.workspace = true
figment = { workspace = true, features = ["env", "yaml"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
spark-wallet.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
